--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "ajv-keywords": "^3.5.2",
     "axios": "^1.7.3",
     "bootstrap": "^5.3.3",
+    "cdbreact": "^1.5.19",
+    "chart.js": "^4.4.7",
     "font-awesome": "^4.7.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-icons-kit": "^2.0.0",
