--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
     "react-chartjs-2": "^5.3.0",
+    "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-icons-kit": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.1",
     "react-scripts": "^5.0.1",
+    "react-to-print": "^3.0.5",
     "redux": "^5.0.1",
+    "styled-components": "^6.1.14",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
